# compass

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVAL.md  Makefile  PRIVACY.md  PROMPTS.md  PROVIDERS.md  README.md  SCORING.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: pyproject.toml
backend/app/: __init__.py  eval_runner.py  main.py  worker.py
backend/app/api/: routes.py  store.py
backend/app/apply/: __init__.py  tracker.py
backend/app/auth/: __init__.py  sessions.py
backend/app/core/: circuit_breaker.py  config.py  rate_limit.py
backend/app/db/: models.py
backend/app/embeddings/: __init__.py  provider.py
backend/app/jobs/: __init__.py  dedupe.py  index.py  normalize.py
backend/app/jobs/providers/: base.py  mock.py  official.py  registry.py
backend/app/llm/: provider.py
backend/app/matching/: __init__.py  gap_closer.py  scorer.py
backend/app/notify/: __init__.py  digest.py
backend/app/profile/: __init__.py  completeness.py
backend/app/resume/: __init__.py  ats_rules.py  content_scorer.py  extract.py  parser.py  rewrite.py
backend/app/search/: __init__.py  hybrid.py
backend/app/storage/: __init__.py  local.py
backend/app/tailoring/: __init__.py  resume.py
backend/tests/: test_api_flow.py  test_jobs.py  test_matching.py  test_resume.py  test_services.py
docs/: REQUIREMENTS_AUDIT.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.setup.ts
infra/: docker-compose.yml
(+27 files in other folders)
