[project]
name = "compass-backend"
version = "0.1.0"
description = "FastAPI backend for Compass."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "email-validator==2.2.0",
  "python-docx==1.1.2",
  "pdfminer.six==20240706",
  "pypdf==5.1.0",
  "python-multipart==0.0.20"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
  "black==24.10.0",
  "mypy==1.14.0",
  "pre-commit==4.0.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
